# TurboDedup

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SMART_SYMLINK_EXAMPLES.md  TASKS.md  auto-config.py  gpu_accelerator.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_enhanced.txt  setup.py  similarity_detector.py  test_smart_symlink_patterns.py  test_symlink_feature.py  turbodedup.py
turbodedup/: __init__.py
turbodedup/cli/: __init__.py  main.py
turbodedup/core/: __init__.py  cache_manager.py  symlink_manager.py
turbodedup/utils/: __init__.py  interactive_cleaner.py
